tdf#117900 Reload document after signing signature line

So that the graphic reflects the new "signed" state

Change-Id: Ic943581c4dfff53fbf9fbd5f1398c98842497a25
Reviewed-on: https://gerrit.libreoffice.org/56477
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>